kubernetes/templates/specs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: STACK_NAME
  labels:
    stack: STACK_NAME
