kubernetes/templates/specs/api-gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    stack: STACK_NAME
spec:
  clusterIP: None
  ports:
  - port: 9999
  selector:
    type: api-gateway
    service: api-gateway
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: api-gateway
  labels:
    stack: STACK_NAME
spec:
  serviceName: api-gateway
  replicas: API_GATEWAY_REPLICAS
  selector:
    matchLabels:
      type: api-gateway
      service: api-gateway
  template:
    metadata:
      labels:
        type: api-gateway
        service: api-gateway
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: api-gateway
        image: ECR_ID.dkr.ecr.ECR_REGION.amazonaws.com/stellarbot/api-gateway:IMAGE_TAG
        imagePullPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-gateway
  labels:
    stack: STACK_NAME
    type: api-gateway
    service: api-gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: STACK_NAME.DOMAIN_NAME
    http:
      paths:
      - backend:
          serviceName: api-gateway
          servicePort: 9999
